# server-litestar

./: .gitignore  .infisical.json  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  channels.py  db.py  dependencies.py  listeners.py  pubsub.py  session.py  settings.py
app/authentication/: __init__.py  models.py
app/clients/: audiotags.py  ffmpeg.py  google.py  image_downloader.py  imagedownloader.py  invidious.py  s3.py  smtp2go.py  ytdlp.py
app/controllers/: __init__.py  authentication.py
app/db/: __init__.py  alembic.ini
app/db/migrations/: env.py
app/db/migrations/versions/: 2025-04-10__36fadaae1ada.py
app/db/models/: musicjob.py  users.py
app/models/: __init__.py  authentication.py  music.py
app/queue/: __init__.py  app.py  context.py  email.py  music.py  task.py
app/routes/authentication/: __init__.py
app/routes/music/: __init__.py
app/routes/music/controllers/: job.py
app/services/: temp_files.py  tempfiles.py
app/templates/: __init__.py
app/templates/email/: base.jinja  reset.jinja  verify.jinja
app/tests/: __init__.py  conftest.py  test_authentication.py
app/tests/authentication/: test_create.py  test_login.py  test_logout.py  test_send_reset.py  test_session.py
app/tests/authentication/queue/: test_send_password_reset_email.py
app/tests/authentication/routes/: test_create.py  test_send_reset.py  test_verify.py
app/tests/music/: conftest.py  test_artwork.py  test_create_job.py  test_grouping.py
app/tests/queue/: test_music.py
app/tests/routes/authentication/: test_login.py  test_reset.py
app/tests/routes/music/: test_create_job.py  test_tags.py
app/utils/: music.py  youtube.py
migrations/versions/: 2025-04-10__36fadaae1ada.py
tests/: conftest.py
tests/queue/: test_email.py  test_music.py
tests/routes/authentication/: test_create.py  test_logout.py  test_send_reset.py
