[project]
name = "dripdrop-litestar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "litestar[full]>=2.15.2",
    "mutagen>=1.47.0",
    "passlib>=1.7.4",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.8.1",
    "rq>=2.3.1",
    "yt-dlp>=2025.3.31",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
