[project]
name = "dripdrop-litestar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "commitizen>=4.5.1",
    "faker>=37.1.0",
    "httpx>=0.28.1",
    "litestar-saq>=0.5.0",
    "litestar[full]>=2.15.2",
    "mutagen>=1.47.0",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.8.1",
    "yt-dlp>=2025.3.31",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
