[project]
name = "dripdrop-litestar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "boto3>=1.37.34",
    "bs4>=0.0.2",
    "commitizen>=4.5.1",
    "fake-useragent>=2.2.0",
    "faker>=37.1.0",
    "httpx>=0.28.1",
    "litestar-saq>=0.5.0",
    "litestar[full]>=2.15.2",
    "mutagen>=1.47.0",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "saq[redis]>=0.22.6",
    "smtp2go>=2.3.1",
    "yt-dlp>=2025.3.31",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "*/db/migrations/*",
    "*/tests/*"
]
